fixed some issues

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 				<img src="http://fineprintnyc.com/images/blog/history-of-logos/google/google-logo.png" alt="Google">
 			</div>
 			<form method="GET">
-				<div class="search">
-					<input type="text"><br>
+				<div id="searchdiv">
+					<input id="search" type="text">
+					<img id="keyboard" src="keyboard.png">
+					<img id="mic" src="mic.png">
 				</div>
 				<div class="buttons">
 					<input type="button" value="Google keresés">
@@ -20,5 +22,6 @@
 				</div>
 			</form>
 		</div>
+		<script src="main.js"></script>
 	</body>
 </html>
