--- a/index.html
+++ b/index.html
@@ -7,14 +7,29 @@
 	</head>
 	<body>
 		<div class="content">
+			<nav>
+				<table>
+					<tr>
+						<td id="name">Martin</td>
+						<td class="nav">Gmail</td>
+						<td class="nav">Képek</td>
+						<td><img id="navic" class="icon" src="nav.png"></td>
+						<td><img id="bell" class="icon" src="bell.png"></td>
+						<td><img class="icon" src="profile.png"></td>
+					</tr>
+				</table>
+				
+			</nav>
 			<div class="image">
 				<img src="http://fineprintnyc.com/images/blog/history-of-logos/google/google-logo.png" alt="Google">
 			</div>
 			<form method="GET">
 				<div id="searchdiv">
 					<input id="search" type="text">
-					<img id="keyboard" src="keyboard.png">
-					<img id="mic" src="mic.png">
+					<div id="inside">
+						<img class="icon" id="keyboard" src="keyboard.png">
+						<img class="icon" id="mic" src="mic.png">
+					</div>
 				</div>
 				<div class="buttons">
 					<input type="button" value="Google keresés">
