--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
 		<link rel="stylesheet" href="master.css">
 	</head>
 	<body>
+		<nav>
+			<table>
+				<tr>
+					<td id="name">Martin</td>
+					<td class="nav">Gmail</td>
+					<td class="nav">Képek</td>
+					<td><img id="navic" class="icon" src="nav.png"></td>
+					<td><img id="bell" class="icon" src="bell.png"></td>
+					<td><img src="profile.png"></td>
+				</tr>
+			</table>
+		</nav>
 		<div class="content">
-			<nav>
-				<table>
-					<tr>
-						<td id="name">Martin</td>
-						<td class="nav">Gmail</td>
-						<td class="nav">Képek</td>
-						<td><img id="navic" class="icon" src="nav.png"></td>
-						<td><img id="bell" class="icon" src="bell.png"></td>
-						<td><img class="icon" src="profile.png"></td>
-					</tr>
-				</table>
-				
-			</nav>
 			<div class="image">
 				<img src="http://fineprintnyc.com/images/blog/history-of-logos/google/google-logo.png" alt="Google">
 			</div>
@@ -37,6 +36,22 @@
 				</div>
 			</form>
 		</div>
+		<footer>
+			<div id="leftFooter">
+				<ul>
+					<li>Hirdetés</li>
+					<li>Vállalkozás</li>
+					<li>Névjegy</li>
+				</ul>
+			</div>
+			<div id="rightFooter">
+				<ul>
+					<li>Adatvédelem</li>
+					<li>Álltalános szerződési feltételek</li>
+					<li>Beállítások</li>
+					<li>Váltás Google.com domainre</li>
+				</ul>
+			</div>
 		<script src="main.js"></script>
 	</body>
 </html>
